Fixed recycleview has cut of the last item.

--- a/app/src/main/res/layout/activity_my_contacts.xml
+++ b/app/src/main/res/layout/activity_my_contacts.xml
@@ -88,10 +88,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewContacts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
 
         app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/viewBottomContainer" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
