--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -5,6 +5,29 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/imageViewBackground"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
+
+        android:scaleType="fitXY"
+        android:src="@drawable/contact_item_background"
+
+
+        app:layout_constraintBottom_toBottomOf="@id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="85dp" />
+
+    <ImageView
         android:id="@+id/imageViewPhoto"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -12,33 +35,35 @@
 
         android:contentDescription="Profile photo"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
+        app:layout_constraintStart_toStartOf="@id/imageViewBackground"
+        app:layout_constraintTop_toTopOf="@id/imageViewBackground" />
 
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="14dp"
 
         android:fontFamily="@font/opensans_semi_bold"
         android:text="Tested name"
         android:textSize="18sp"
 
         app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/imageViewBackground" />
 
     <TextView
         android:id="@+id/textViewProfession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="14dp"
 
         android:fontFamily="@font/opensans_regular"
         android:text="Profession"
         android:textSize="12sp"
 
+        app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
         app:layout_constraintStart_toStartOf="@id/textViewName"
         app:layout_constraintTop_toBottomOf="@id/textViewName" />
 
@@ -46,13 +71,13 @@
         android:id="@+id/imageButtonDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
         android:layout_marginEnd="14dp"
 
         android:background="@null"
         android:src="@drawable/ic_delete"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/imageViewBackground"
+        app:layout_constraintTop_toTopOf="@id/imageViewBackground"
+        app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
