--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="topViewColor">#FF242235</color>
+    <color name="steel_gray">#FF242235</color>
     <color name="alabaster">#FFFAFAFA</color>
-    <color name="grey">#808080</color>
+    <color name="gray">#808080</color>
     <color name="orange">#FB5E06</color>
-    <color name="col_bdbdbd">#BDBDBD</color>
-    <color name="col_b2b2b3">#B2B2B3</color>
-    <color name="col_18181f">#18181F</color>
-    <color name="half_transparent_blue">#4000ADEF</color>
-    <color name="half_transparent_grey">#1A808080</color>
-    <color name="bottomViewColor">@color/alabaster</color>
+    <color name="silver">#BDBDBD</color>
+    <color name="bombay">#B2B2B3</color>
+    <color name="woodsmoke">#18181F</color>
+    <color name="half_transparent_cerulean">#4000ADEF</color>
+    <color name="half_transparent_gray">#1A808080</color>
+    <color name="mine_shaft">@color/alabaster</color>
     <color name="buttonEditProfileTextColor">#000000</color>
 </resources>
