--- a/app/src/main/res/layout/activity_my_contacts.xml
+++ b/app/src/main/res/layout/activity_my_contacts.xml
@@ -123,6 +123,7 @@
 
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/viewBottomContainer" />
+        app:layout_constraintTop_toTopOf="@id/viewBottomContainer"
+        tools:listitem="@layout/contact_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
