--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -77,16 +76,21 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/dimension_8dp"
+        android:layout_marginEnd="16dp"
 
+        android:ellipsize="end"
         android:fontFamily="@font/opensans_semi_bold"
-        android:text="Tested name"
+        android:lines="1"
+        android:scrollHorizontally="true"
+        android:text="Very long test name AABBCCDDEE"
         android:textSize="18sp"
 
         app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline_contactItem_054"
+        app:layout_constraintEnd_toStartOf="@id/imageButtonDelete"
         app:layout_constraintStart_toEndOf="@id/imageViewPhoto" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -101,16 +105,6 @@
 
         app:layout_constraintStart_toStartOf="@id/textViewName"
         app:layout_constraintTop_toBottomOf="@id/horizontalGuideline_contactItem_054" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:textSize="@dimen/text_16sp"
-        app:layout_constraintBottom_toBottomOf="@id/textViewName"
-        app:layout_constraintStart_toEndOf="@id/textViewName"
-        tools:text="timer"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageButtonDelete"
