--- a/app/src/main/res/layout/add_contacts_dialog.xml
+++ b/app/src/main/res/layout/add_contacts_dialog.xml
@@ -57,7 +57,7 @@
         android:id="@+id/button_addcontactsdialog_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Add contact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_profession" />
