--- a/app/src/main/res/layout/add_contacts_dialog.xml
+++ b/app/src/main/res/layout/add_contacts_dialog.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/steel_gray">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinputlayout_addcontactsdialog_name"
@@ -10,13 +11,18 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
 
+        android:hint="@string/dialog_contact_name"
+        android:textColorHint="@color/silver"
+        app:hintTextColor="@color/silver"
+
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/textinputedittext_addcontactsdialog_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name"
+
+            android:textColor="@color/alabaster"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -26,14 +32,18 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
 
+        android:hint="@string/dialog_contact_surname"
+        android:textColorHint="@color/silver"
+        app:hintTextColor="@color/silver"
+
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_name">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/textinputedittext_addcontactsdialog_surname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Surname"
 
+            android:textColor="@color/alabaster"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -43,21 +53,29 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
 
+        android:hint="@string/dialog_contact_profession"
+        android:textColorHint="@color/silver"
+        app:hintTextColor="@color/silver"
+
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_surname">
 
-
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/textinputedittext_addcontactsdialog_profession"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Profession" />
+
+            android:textColor="@color/alabaster"
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_addcontactsdialog_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add contact"
+
+        android:backgroundTint="@color/orange"
+        android:text="@string/add_contact"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_profession" />
