--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_activity_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -130,9 +131,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewAddress"
+        style="@style/widthHeightIsWrapContent"
         android:layout_marginTop="@dimen/dimension_16dp"
         android:layout_marginBottom="@dimen/dimension_52dp"
-        style="@style/widthHeightIsWrapContent"
 
         android:text="@string/address"
         android:textAppearance="@style/additionalTextAppearance"
