--- a/app/src/main/res/layout/fragment_my_contacts.xml
+++ b/app/src/main/res/layout/fragment_my_contacts.xml
@@ -5,7 +5,7 @@
     android:id="@+id/my_contacts_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentMyContacts">
+    tools:context=".MyContactsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayoutNord2"
