--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="dimension_32dp">32dp</dimen>
     <dimen name="dimension_40dp">40dp</dimen>
     <dimen name="dimension_52dp">52dp</dimen>
+    <dimen name="dimension_62dp">62dp</dimen>
     <!-- Text size  -->
     <dimen name="text_12sp">12sp</dimen>
     <dimen name="text_14sp">14sp</dimen>
