--- a/app/src/main/res/layout-land/fragment_my_profile.xml
+++ b/app/src/main/res/layout-land/fragment_my_profile.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity_constraint_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
         android:id="@+id/constraintLayoutNord"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -18,12 +17,9 @@
         app:layout_constraintEnd_toStartOf="@id/constraintLayoutSouth"
         app:layout_constraintHorizontal_weight="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
         android:id="@+id/constraintLayoutSouth"
         android:layout_width="0dp"
         android:layout_height="match_parent"
