Renamed file names

--- a/app/src/main/res/layout-land/fragment_sign_up.xml
+++ b/app/src/main/res/layout-land/fragment_sign_up.xml
@@ -132,7 +132,7 @@
             android:layout_marginTop="@dimen/dimension_18dp"
 
             android:backgroundTint="@color/orange"
-            android:button="@drawable/checkbox"
+            android:button="@drawable/cb"
             android:buttonTint="@color/alabaster"
             android:checked="true"
             android:paddingStart="@dimen/dimension_8dp"
